--- a/index.ipynb
+++ b/index.ipynb
@@ -126,9 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. --- canine --- This is a class object accessing its class variable\n",
+      "2. --- HI IM A CANINE --- This is an instance object accessing its **intstance** variable\n"
+     ]
+    }
+   ],
    "source": [
     "class Dog:\n",
     "    \n",
@@ -137,7 +146,7 @@
     "    def __init__(self, species, breed, name, age):\n",
     "        self._species = species\n",
     "        self._breed = breed\n",
-    "        self._name = name        \n",
+    "        self._name = name  \n",
     "        self._age = age        \n",
     "\n",
     "new_dog = Dog(\"HI IM A CANINE\", \"Airedale\", \"The Dude\", \"13\")\n",
