--- a/index.ipynb
+++ b/index.ipynb
@@ -283,16 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. --- [] --- Checking the Dog class's class variale _all\n",
-      "2. --- [<__main__.Dog object at 0x7fa470a997f0>] --- Using the add_dog class method to add a new dog instance to _all\n",
-      "3. --- [<__main__.Dog object at 0x7fa470a997f0>] --- Checking the Dog class's class variale _all\n"
+      "1. --- [] --- Checking the Dog class's class variable _all\n",
+      "2. --- [<__main__.Dog object at 0x7fa470a99ac8>] --- Using the add_dog class method to add a new dog instance to _all\n",
+      "3. --- [<__main__.Dog object at 0x7fa470a99ac8>] --- Checking the Dog class's class variale _all\n"
      ]
     }
    ],
@@ -314,7 +314,7 @@
     "biscuit = Dog(\"Airedale\", \"Biscuit\", 12)\n",
     "biscuit = Dog(\"Airedale\", \"Biscuit\", 12)\n",
     "biscuit = Dog(\"Airedale\", \"Biscuit\", 12)\n",
-    "print(\"1. ---\", Dog._all, \"--- Checking the Dog class's class variale _all\")\n",
+    "print(\"1. ---\", Dog._all, \"--- Checking the Dog class's class variable _all\")\n",
     "print(\"2. ---\", Dog.add_dog(biscuit), \"--- Using the add_dog class method to add a new dog instance to _all\")\n",
     "print(\"3. ---\", Dog._all, \"--- Checking the Dog class's class variale _all\")"
    ]
