Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -291,8 +291,8 @@
      "output_type": "stream",
      "text": [
       "1. --- [] --- Checking the Dog class's class variable _all\n",
-      "2. --- [<__main__.Dog object at 0x7fa470a99ac8>] --- Using the add_dog class method to add a new dog instance to _all\n",
-      "3. --- [<__main__.Dog object at 0x7fa470a99ac8>] --- Checking the Dog class's class variale _all\n"
+      "2. --- [<__main__.Dog object at 0x7fa470a99cf8>] --- Using the add_dog class method to add a new dog instance to _all\n",
+      "3. --- [<__main__.Dog object at 0x7fa470a99cf8>] --- Checking the Dog class's class variale _all\n"
      ]
     }
    ],
